--- a/x01.Weiqi.Client/Board/SaveStepWindow.xaml
+++ b/x01.Weiqi.Client/Board/SaveStepWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="x01.Weiqi.Board.SaveStepWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Save Step Window" Height="223" Width="226">
+        Title="Save Step Window" Height="249" Width="343">
     <StackPanel HorizontalAlignment="Center" Margin="10 20 10 10">
         <StackPanel.Resources>
             <Style TargetType="TextBox">
@@ -12,17 +12,24 @@
             </Style>
         </StackPanel.Resources>
         <StackPanel Orientation="Horizontal">
+            <Label>说明：</Label>
+            <TextBox Name="m_Title" Width="240" >小黑大战小白</TextBox>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal">
             <Label>黑方：</Label>
-            <TextBox Name="m_BlackName" >blacker</TextBox>
+            <TextBox Name="m_BlackName" >小黑</TextBox>
         </StackPanel>
         <StackPanel Orientation="Horizontal">
             <Label>白方：</Label>
-            <TextBox Name="m_WhiteName">whiter</TextBox>
+            <TextBox Name="m_WhiteName">小白</TextBox>
         </StackPanel>
         <StackPanel Orientation="Horizontal">
             <Label>结果：</Label>
-            <TextBox Name="m_Winer">unknown</TextBox>
+            <TextBox Name="m_Winer">黑胜</TextBox>
         </StackPanel>
-        <Button Name="OK" Click="OK_Click" HorizontalAlignment="Right" Width="60" Margin="10 20 10 10">保存</Button>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+            <Button Name="OK" Click="OK_Click" Width="60" Margin="10" Content="保存(_S)"></Button>
+            <Button Name="Cancel" Click="Cancel_Click" Width="60" Margin="10" Content="取消(_C)"></Button>
+        </StackPanel>
     </StackPanel>
 </Window>
