--- a/x01.Weiqi.Client/Dialog/SaveStepWindow.xaml
+++ b/x01.Weiqi.Client/Dialog/SaveStepWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="x01.Weiqi.Board.SaveStepWindow"
+﻿<Window x:Class="x01.Weiqi.Dialog.SaveStepWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Save Step Window" Height="249" Width="343">
