--- a/x01.Weiqi.Client/MainWindow.xaml
+++ b/x01.Weiqi.Client/MainWindow.xaml
@@ -2,24 +2,30 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Width="800" Height="800">
+    <Window.Resources>
+        <Style TargetType="MenuItem">
+            <Setter Property="Margin" Value="5" />
+            <Setter Property="FontSize" Value="16" />
+        </Style>
+    </Window.Resources>
     <DockPanel Name="m_DockPanel"> 
         <Menu DockPanel.Dock="Top" HorizontalAlignment="Left" >
-            <MenuItem Header="围棋(_F)" ToolTip="File"  FontSize="20">
-                <MenuItem Header="开始对弈(_G)" ToolTip="Start Game" Name="m_MenuStart" FontSize="16" Click="MenuStart_Click"></MenuItem>
-                <MenuItem Header="网络对弈(_W)" ToolTip="Web Game" Name="m_MenuInet" FontSize="16" Click="MenuInet_Click"></MenuItem>
-                <MenuItem Header="人机对弈(_I)" ToolTip="AI Game" Name="m_MenuWhere" FontSize="16" Click="MenuWhere_Click"></MenuItem>
+            <MenuItem Header="围棋(_F)" ToolTip="File">
+                <MenuItem Header="开始对弈(_G)" ToolTip="Start Game" Name="m_MenuStart" Click="MenuStart_Click"></MenuItem>
+                <MenuItem Header="网络对弈(_W)" ToolTip="Web Game" Name="m_MenuInet" Click="MenuInet_Click"></MenuItem>
+                <MenuItem Header="人机对弈(_I)" ToolTip="AI Game" Name="m_MenuWhere"  Click="MenuWhere_Click"></MenuItem>
                 <Separator />
-                <MenuItem Header="加载棋谱(_L)" ToolTip="Load" Name="m_MenuLoad" FontSize="16" Click="MenuLoad_Click"></MenuItem>
-                <MenuItem Header="保存棋谱(_S)" ToolTip="Save" Name="m_MenuSave" FontSize="16" Click="MenuSave_Click"></MenuItem>
+                <MenuItem Header="加载棋谱(_L)" ToolTip="Load" Name="m_MenuLoad"  Click="MenuLoad_Click"></MenuItem>
+                <MenuItem Header="保存棋谱(_S)" ToolTip="Save" Name="m_MenuSave"  Click="MenuSave_Click"></MenuItem>
                 <Separator />
-                <MenuItem Header="退出(_E)" ToolTip="Exit" Name="m_Exit" FontSize="16" Click="Exit_Click"></MenuItem>
+                <MenuItem Header="退出(_E)" ToolTip="Exit" Name="m_Exit"  Click="Exit_Click"></MenuItem>
             </MenuItem>
-            <MenuItem Header="操作(_O)" ToolTip="Operate" FontSize="20">
-                <MenuItem Header="显示步数(_N)      F1" ToolTip="Show Number" Name="m_MenuShowNumber" FontSize="16" Click="MenuShowNumber_Click" IsChecked="True" IsCheckable="True"/>
-                <MenuItem Header="清除所有(_C)      ESC" ToolTip="Clear All" Name="m_MenuClearAll" FontSize="16" Click="MenuClearAll_Click"></MenuItem>
+            <MenuItem Header="操作(_O)" ToolTip="Operate" >
+                <MenuItem Header="显示步数(_N)      F1" ToolTip="Show Number" Name="m_MenuShowNumber"  Click="MenuShowNumber_Click" IsChecked="True" IsCheckable="True"/>
+                <MenuItem Header="清除所有(_C)      ESC" ToolTip="Clear All" Name="m_MenuClearAll" Click="MenuClearAll_Click"></MenuItem>
             </MenuItem>
-            <MenuItem Header="帮助(_H)" ToolTip="Help" FontSize="20">
-                <MenuItem Header="关于(_A)" ToolTip="About" Name="m_About" FontSize="16" Click="About_Click"></MenuItem>
+            <MenuItem Header="帮助(_H)" ToolTip="Help">
+                <MenuItem Header="关于(_A)" ToolTip="About" Name="m_About"  Click="About_Click"></MenuItem>
             </MenuItem>
         </Menu>
     </DockPanel>
