--- a/x01.Weiqi.Client/Dialog/LoadStepWindow.xaml
+++ b/x01.Weiqi.Client/Dialog/LoadStepWindow.xaml
@@ -2,9 +2,12 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Model="clr-namespace:x01.Weiqi.Model" 
-        Title="Load Step Window" Height="227" Width="257" ShowInTaskbar="False" WindowStartupLocation="CenterScreen" SizeToContent="WidthAndHeight">
+        Title="Load Step Window" Height="227" Width="257" 
+        ShowInTaskbar="False" WindowStartupLocation="CenterScreen" SizeToContent="WidthAndHeight">    
     <StackPanel>
-        <DataGrid x:Name="grid" ItemsSource="{Binding}" ToolTip="Double click select" MouseDoubleClick="grid_MouseDoubleClick"/>
-        <Button Name="btnCancel" Content="_Cancel" Click="btnCancel_Click" HorizontalAlignment="Right" Margin="10" FontSize="16" Width="70" />
+        <DataGrid x:Name="grid" ItemsSource="{Binding}" ToolTip="Double click select" 
+                  MouseDoubleClick="grid_MouseDoubleClick"/>
+        <Button Name="btnCancel" Content="_Cancel" Click="btnCancel_Click" 
+                HorizontalAlignment="Right" Margin="10" FontSize="16" Width="70" />
     </StackPanel>
 </Window>
