--- a/x01.Weiqi.Client/MainWindow.xaml
+++ b/x01.Weiqi.Client/MainWindow.xaml
@@ -17,15 +17,16 @@
                 <Separator />
                 <MenuItem Header="加载棋谱(_L)" ToolTip="Load" Name="m_MenuLoad"  Click="MenuLoad_Click"></MenuItem>
                 <MenuItem Header="保存棋谱(_S)" ToolTip="Save" Name="m_MenuSave"  Click="MenuSave_Click"></MenuItem>
+                <MenuItem Header="删除棋谱(_D)" ToolTip="Save" Name="m_MenuDelete"  Click="MenuDelete_Click"></MenuItem>
                 <Separator />
-                <MenuItem Header="退出(_E)" ToolTip="Exit" Name="m_Exit"  Click="Exit_Click"></MenuItem>
+                <MenuItem Header="退出(_E)" ToolTip="Exit" Name="m_MenuExit"  Click="MenuExit_Click"></MenuItem>
             </MenuItem>
             <MenuItem Header="操作(_O)" ToolTip="Operate" >
                 <MenuItem Header="显示步数(_N)      F1" ToolTip="Show Number" Name="m_MenuShowNumber"  Click="MenuShowNumber_Click" IsChecked="True" IsCheckable="True"/>
                 <MenuItem Header="清除所有(_C)      ESC" ToolTip="Clear All" Name="m_MenuClearAll" Click="MenuClearAll_Click"></MenuItem>
             </MenuItem>
             <MenuItem Header="帮助(_H)" ToolTip="Help">
-                <MenuItem Header="关于(_A)" ToolTip="About" Name="m_About"  Click="About_Click"></MenuItem>
+                <MenuItem Header="关于(_A)" ToolTip="About" Name="m_MenuAbout"  Click="MenuAbout_Click"></MenuItem>
             </MenuItem>
         </Menu>
     </DockPanel>
