--- a/x01.Weiqi.Client/Dialog/LoadRecordDialog.xaml
+++ b/x01.Weiqi.Client/Dialog/LoadRecordDialog.xaml
@@ -5,9 +5,9 @@
         Title="Load Record Dialog" Height="227" Width="257" 
         ShowInTaskbar="False" WindowStartupLocation="CenterScreen" SizeToContent="WidthAndHeight">    
     <StackPanel>
-        <DataGrid x:Name="grid" ItemsSource="{Binding}" ToolTip="Double click select" 
-                  MouseDoubleClick="grid_MouseDoubleClick"/>
-        <Button Name="btnCancel" Content="_Cancel" Click="btnCancel_Click" 
+		<DataGrid x:Name="grid" ItemsSource="{Binding}" ToolTip="Double click select"  
+                  MouseDoubleClick="grid_MouseDoubleClick"  PreviewKeyDown="grid_PreviewKeyDown" />
+		<Button Name="btnCancel" Content="_Cancel" Click="btnCancel_Click" 
                 HorizontalAlignment="Right" Margin="10" FontSize="16" Width="70" />
     </StackPanel>
 </Window>
