--- a/x01.Weiqi/Boards/Board.xaml
+++ b/x01.Weiqi/Boards/Board.xaml
@@ -23,7 +23,7 @@
 		</RadialGradientBrush>
 	</UserControl.Resources>
 	<Grid>
-		<MediaElement Source="d.mp3" LoadedBehavior="Manual" Name="m_Media" />
+		<!--<MediaElement Source="d.mp3" LoadedBehavior="Manual" Name="m_Media" />-->
 		<Canvas Name="m_Canvas" Background="#5eefdf56">
 		</Canvas>
 	</Grid>
