--- a/x01.Weiqi/App.xaml
+++ b/x01.Weiqi/App.xaml
@@ -1,6 +1,7 @@
 ﻿<Application x:Class="x01.Weiqi.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 ShutdownMode="OnMainWindowClose"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
 		<Style TargetType="Button">
