--- a/x01.Weiqi/MainWindow.xaml
+++ b/x01.Weiqi/MainWindow.xaml
@@ -1,8 +1,8 @@
 ﻿<Window x:Class="x01.Weiqi.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		xmlns:b="clr-namespace:x01.Weiqi.Boards" WindowState="Maximized"
-        Title="Main Window" Height="350" Width="525">
+		xmlns:b="clr-namespace:x01.Weiqi.Boards" WindowState="Maximized" 
+        Title="Welcome to x01.Weiqi" Height="640" Width="640">
 	<Window.Resources>
 		<Style TargetType="MenuItem">
 			<Setter Property="Margin" Value="3" />
