--- a/x01.Weiqi/Windows/SaveStepWindow.xaml
+++ b/x01.Weiqi/Windows/SaveStepWindow.xaml
@@ -1,35 +1,45 @@
-﻿<Window x:Class="x01.Weiqi.Windows.SaveStepWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Save Step Window" Height="252" Width="353">
-	<StackPanel HorizontalAlignment="Center" Margin="10 20 10 10">
+        xmlns:System="clr-namespace:System;assembly=mscorlib" x:Class="x01.Weiqi.Windows.SaveStepWindow"
+        Title="Save Step Window" Height="284" Width="353">
+	<StackPanel HorizontalAlignment="Center" Margin="10 20 10 10" Orientation="Vertical">
 		<StackPanel.Resources>
-			<Style TargetType="TextBox">
+			<Style TargetType="{x:Type TextBox}">
 				<Setter Property="Width" Value="120" />
 			</Style>
-			<Style TargetType="StackPanel">
+			<Style TargetType="{x:Type StackPanel}">
 				<Setter Property="Margin" Value="5" />
+				<Setter Property="Orientation" Value="Horizontal" />
 			</Style>
 		</StackPanel.Resources>
-		<StackPanel Orientation="Horizontal">
-			<Label>说明：</Label>
-			<TextBox Name="m_Description" Width="240" >小黑大战小白</TextBox>
+		<StackPanel>
+			<Label Content="说明："/>
+			<TextBox x:Name="m_Description" Width="240" Text="小黑大战小白" />
 		</StackPanel>
-		<StackPanel Orientation="Horizontal">
-			<Label>黑方：</Label>
-			<TextBox Name="m_BlackName" >小黑</TextBox>
+		<StackPanel>
+			<Label Content="类型："/>
+			<ComboBox x:Name="m_Type" Width="120" SelectedIndex="0" >
+				<System:Int32>0</System:Int32>
+				<System:Int32>1</System:Int32>
+				<System:Int32>2</System:Int32>
+			</ComboBox>
 		</StackPanel>
-		<StackPanel Orientation="Horizontal">
-			<Label>白方：</Label>
-			<TextBox Name="m_WhiteName">小白</TextBox>
+		<StackPanel>
+			<Label Content="黑方："/>
+			<TextBox x:Name="m_BlackName" Text="小黑" />
 		</StackPanel>
-		<StackPanel Orientation="Horizontal">
-			<Label>结果：</Label>
-			<TextBox Name="m_Result">黑胜</TextBox>
+		<StackPanel>
+			<Label Content="白方："/>
+			<TextBox x:Name="m_WhiteName" Text="小白"/>
 		</StackPanel>
-		<StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-			<Button Name="OK" Click="OK_Click" Width="60" Margin="10" Content="保存(_S)"></Button>
-			<Button Name="Cancel" Click="Cancel_Click" Width="60" Margin="10" Content="取消(_C)"></Button>
+		<StackPanel>
+			<Label Content="结果："/>
+			<TextBox x:Name="m_Result" Text="黑胜"/>
+		</StackPanel>
+		<StackPanel HorizontalAlignment="Right">
+			<Button x:Name="OK" Click="OK_Click" Width="60" Margin="10" Content="保存(_S)"/>
+			<Button x:Name="Cancel" Click="Cancel_Click" Width="60" Margin="10" Content="取消(_C)"/>
 		</StackPanel>
 	</StackPanel>
 </Window>
