--- a/x01.Weiqi/Windows/LoadStepWindow.xaml
+++ b/x01.Weiqi/Windows/LoadStepWindow.xaml
@@ -2,12 +2,10 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Load Step Window" Height="300" Width="300" 
-		WindowStartupLocation="CenterScreen" SizeToContent="WidthAndHeight">
-	<StackPanel>
-		<StackPanel.Resources>
-		</StackPanel.Resources>
+		WindowStartupLocation="CenterScreen">
+	<ScrollViewer>
 		<DataGrid x:Name="m_RecordGrid" ItemsSource="{Binding}" ToolTip="Double click select" 
-				  SelectedIndex="0" AutoGenerateColumns="False" 
+				  SelectedIndex="0" AutoGenerateColumns="False" VerticalScrollBarVisibility="Visible"
 				  MouseDoubleClick="m_RecordGrid_MouseDoubleClick" PreviewKeyDown="m_RecordGrid_PreviewKeyDown">
 			<DataGrid.ColumnHeaderStyle>
 				<Style TargetType="DataGridColumnHeader">
@@ -24,5 +22,5 @@
 				<DataGridTextColumn Header="保存时间" Binding="{Binding Path=SaveDate}" />
 			</DataGrid.Columns>
 		</DataGrid>
-	</StackPanel>
+	</ScrollViewer>
 </Window>
