--- a/x01.Weiqi/Windows/DeleteStepWindow.xaml
+++ b/x01.Weiqi/Windows/DeleteStepWindow.xaml
@@ -1,12 +1,13 @@
 ﻿<Window x:Class="x01.Weiqi.Windows.DeleteStepWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Delete Step Window" Height="292" Width="344" WindowStartupLocation="CenterScreen">
+        Title="Delete Step Window" Height="334" Width="344" WindowStartupLocation="CenterScreen">
 	<StackPanel HorizontalAlignment="Center" Margin="10 20 10 10">
 		<StackPanel.Resources>
 			<Style TargetType="TextBox">
 				<Setter Property="Width" Value="120" />
 				<Setter Property="IsReadOnly" Value="True" />
+				<Setter Property="VerticalContentAlignment" Value="Center" />
 			</Style>
 			<Style TargetType="StackPanel">
 				<Setter Property="Margin" Value="5" />
@@ -19,6 +20,10 @@
 		<StackPanel Orientation="Horizontal">
 			<Label>说明：</Label>
 			<TextBox Name="m_Description" Width="240" ></TextBox>
+		</StackPanel>
+		<StackPanel Orientation="Horizontal">
+			<Label>类型：</Label>
+			<TextBox Name="m_Type" Width="240" ></TextBox>
 		</StackPanel>
 		<StackPanel Orientation="Horizontal">
 			<Label>黑方：</Label>
