--- a/x01.Weiqi/Windows/SaveStepWindow.xaml
+++ b/x01.Weiqi/Windows/SaveStepWindow.xaml
@@ -7,6 +7,7 @@
 		<StackPanel.Resources>
 			<Style TargetType="{x:Type TextBox}">
 				<Setter Property="Width" Value="120" />
+				<Setter Property="VerticalContentAlignment" Value="Center" />
 			</Style>
 			<Style TargetType="{x:Type StackPanel}">
 				<Setter Property="Margin" Value="5" />
