--- a/x01.Weiqi/MainWindow.xaml
+++ b/x01.Weiqi/MainWindow.xaml
@@ -21,14 +21,15 @@
 				<Separator />
 				<MenuItem Header="加载棋谱(_L)" ToolTip="Load  Ctl+L" Name="m_MenuLoad"></MenuItem>
 				<MenuItem Header="保存棋谱(_S)" ToolTip="Save  Ctl+S" Name="m_MenuSave"></MenuItem>
+				<MenuItem Header="编辑棋谱(_E)" ToolTip="Edit  Ctl+E" Name="m_MenuEdit"></MenuItem>
 				<MenuItem Header="删除棋谱(_D)" ToolTip="Delete  Ctl+D" Name="m_MenuDelete"></MenuItem>
 				<Separator />
-				<MenuItem Header="退出(_E)" ToolTip="Exit  Ctl+E" Name="m_MenuExit"></MenuItem>
+				<MenuItem Header="退出(_X)" ToolTip="Exit  Ctl+X" Name="m_MenuExit"></MenuItem>
 			</MenuItem>
 			<MenuItem Header="操作(_O)" ToolTip="Operate" >
-				<MenuItem Header="显示步数(_N)    F1" ToolTip="Show Number" Name="m_MenuShowNumber" IsChecked="True" IsCheckable="True"/>
-				<MenuItem Header="点目(_M)" ToolTip="Show Meshes    F2" Name="m_MenuShowMeshes" IsChecked="False" IsCheckable="True"/>
-				<MenuItem Header="音效(_S)" ToolTip="Play Sound    F3" Name="m_MenuPlaySound" IsChecked="False" IsCheckable="True"/>
+				<MenuItem Header="显示步数(_N) F1" ToolTip="Show Number    F1" Name="m_MenuShowNumber" IsChecked="True" IsCheckable="True"/>
+				<MenuItem Header="点目(_M)    F2" ToolTip="Show Meshes    F2" Name="m_MenuShowMeshes" IsChecked="False" IsCheckable="True"/>
+				<MenuItem Header="音效(_S)     F3" ToolTip="Play Sound    F3" Name="m_MenuPlaySound" IsChecked="False" IsCheckable="True"/>
 				<Separator />
 				<MenuItem Header="清除所有(_C)    ESC" ToolTip="Clear All" Name="m_MenuClearAll"></MenuItem>
 			</MenuItem>
