--- a/x01.Weiqi/Boards/Stone.xaml
+++ b/x01.Weiqi/Boards/Stone.xaml
@@ -3,6 +3,6 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Width="200" Height="200">
 	<Grid>
 		<Ellipse x:Name="stone" />
-		<TextBlock x:Name="number" HorizontalAlignment="Center" VerticalAlignment="Center" />
+		<TextBlock x:Name="number" Background="Transparent" HorizontalAlignment="Center" VerticalAlignment="Center" />
 	</Grid>
 </UserControl>
